--- a/casper/gatekeeper-lib/package.json
+++ b/casper/gatekeeper-lib/package.json
@@ -1,24 +1,15 @@
 {
   "name": "@identity.com/casper-gatekeeper-lib",
   "description": "Library and CLI to manage Gateway Tokens on Casper",
-  "version": "0.1.4",
+  "version": "0.2.0-no-oclif",
   "author": "dankelleher @dankelleher",
-  "bin": {
-    "gateway": "./bin/run"
-  },
   "bugs": "https://github.com/identity-com/ociv/issues",
   "dependencies": {
-    "@metacask/kyc-token-client": "git+ssh://git@github.com/mcask/kyc-token-client.git#0.3.2",
-    "@oclif/command": "^1.8.0",
-    "@oclif/config": "^1.17.0",
-    "@oclif/plugin-help": "^3.2.2",
-    "borsh": "^0.4.0",
+    "@metacask/kyc-token-client": "github:mcask/kyc-token-client#0.3.2",
     "casper-js-sdk": "^2.7.1",
     "tslib": "^1"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.0",
-    "@oclif/test": "^1.2.8",
     "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
     "@types/chai": "^4",
@@ -35,7 +26,6 @@
     "globby": "^10",
     "mocha": "^5",
     "nyc": "^14",
-    "oclif": "^1.17.0",
     "postinstall-prepare": "^2.0.0",
     "prettier": "^2.3.0",
     "ts-node": "^8",
@@ -58,17 +48,9 @@
   ],
   "license": "MIT",
   "main": "dist/index.js",
-  "oclif": {
-    "commands": "./dist/commands",
-    "bin": "gateway",
-    "plugins": [
-      "@oclif/plugin-help"
-    ]
-  },
   "repository": "git@github.com:identity-com/on-chain-identity-gateway.git",
   "scripts": {
-    "build": "rm -rf dist && tsc -b && oclif-dev manifest && oclif-dev readme && yarn doc",
-    "postpack": "rm -f oclif.manifest.json",
+    "build": "rm -rf dist && tsc -b && yarn doc",
     "posttest": "yarn lint",
     "prepack": "yarn build",
     "start-validator": "solana-test-validator --bpf-program gatem74V238djXdzWnJf94Wo1DcnuGkfijbf3AuBhfs ../program/target/deploy/solana_gateway_program.so --reset",
@@ -76,7 +58,6 @@
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "test:unit": "nyc --extension .ts mocha --forbid-only \"test/unit/**/*.test.ts\"",
     "test:integration": "nyc --extension .ts mocha --forbid-only \"test/integration/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md",
     "doc": "yarn typedoc src/index.ts --readme none --excludeNotDocumented"
   },
   "types": "dist/index.d.ts"
